--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="main.css">
     <title>My page</title>
 </head>
 <body>
-
     <header>
+        <div class="top-header">
+            <img src="/images/logo.png" alt="">
+            <input type="text" placeholder="Search your item">
+            <span class="material-symbols-outlined">search</span>
+            <a href="#">Login / Register</a>
+        </div>
         <nav>
-            <div class="logo">
-                <img src="/images/logo.png" alt="">
-            </div>
             <ul>
                 <a href="#"><li>Home</li></a>
                 <a href="#"><li>About us</li></a>
                 <a href="#"><li>Contact us</li></a>
                 <a href="#"><li>Shop</li></a>
             </ul>
-            <div class="login-btn">
-                <a href="#">Login / Register</a>
-            </div>
+            
         </nav>
       
     </header>
