Sort search box

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <header>
         <div class="top-header">
             <img src="/images/logo.png" alt="">
-            <input type="text" placeholder="Search your item">
-            <span class="material-symbols-outlined">search</span>
+            <div class="search">
+                <input type="text" placeholder="Search your item">
+                <span class="material-symbols-outlined">search</span>
+            </div>
             <a href="#">Login / Register</a>
         </div>
         <nav>
