change some styles

--- a/index.html
+++ b/index.html
@@ -150,6 +150,46 @@
                 </div>
               </a>
             </div>
+            <div class="card">
+              <a href="#">
+                <img src="/images/lap2-asus-vio.png" alt="">
+                <div class="product-content">
+                    <h4 class="pro-title">Headphone1</h4>
+                    <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
+                    <span class="price">£29.99</span>
+                    <div class="pro-footer">
+                        <div class="rate">
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                        </div>
+                        <button class="add-to-care-btn">Add to cart</button>
+                    </div>
+                </div>
+              </a>
+            </div>
+            <div class="card">
+              <a href="#">
+                <img src="/images/webcam1.png" alt="">
+                <div class="product-content">
+                    <h4 class="pro-title">Headphone1</h4>
+                    <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
+                    <span class="price">£29.99</span>
+                    <div class="pro-footer">
+                        <div class="rate">
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                            <span class="material-symbols-outlined">star</span>
+                        </div>
+                        <button class="add-to-care-btn">Add to cart</button>
+                    </div>
+                </div>
+              </a>
+            </div>
 
 
         </div>
