--- a/index.html
+++ b/index.html
@@ -190,13 +190,29 @@
                 </div>
               </a>
             </div>
-
-
         </div>
     </section>
     
     <footer>
+        <div class="footer-wraper">
+            <div class="foot-menu">
+                <ul>
+                    <a href="#"><li>Home</li></a>
+                    <a href="#"><li>About us</li></a>
+                    <a href="#"><li>Contact us</li></a>
+                    <a href="#"><li>Shop</li></a>
+                </ul>   
+            </div>
+            <div class="foot-menu">
+                <ul>
+                    <a href="#"><li>Home</li></a>
+                    <a href="#"><li>About us</li></a>
+                    <a href="#"><li>Contact us</li></a>
+                    <a href="#"><li>Shop</li></a>
+                </ul>   
+            </div>
 
+        </div>
     </footer>
     
 </body>
