Add footer & improve nav styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" />
     <link rel="stylesheet" href="main.css">
     <title>My page</title>
 </head>
@@ -18,13 +19,15 @@
             <a href="#">Login / Register</a>
         </div>
         <nav>
-            <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>About us</li></a>
-                <a href="#"><li>Contact us</li></a>
-                <a href="#"><li>Shop</li></a>
-            </ul>
-            <span class="material-symbols-outlined">shopping_basket</span>
+            <div class="menu">
+                <ul>
+                    <a href="#"><li>Home</li></a>
+                    <a href="#"><li>About us</li></a>
+                    <a href="#"><li>Contact us</li></a>
+                    <a href="#"><li>Shop</li></a>
+                </ul>
+                <span class="material-symbols-outlined">shopping_basket</span>
+            </div>
         </nav>
     </header>
     <section>
@@ -54,7 +57,7 @@
               <a href="#">
                 <img src="/images/head2.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">Headphone2</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -74,7 +77,7 @@
               <a href="#">
                 <img src="/images/head3.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">Headphone3</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -94,7 +97,7 @@
               <a href="#">
                 <img src="/images/key1.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">Keyboard1</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -114,7 +117,7 @@
               <a href="#">
                 <img src="/images/key2.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">Keyboard2</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -134,7 +137,7 @@
               <a href="#">
                 <img src="/images/lap1-asus-vio.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">Laptop1</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -154,7 +157,7 @@
               <a href="#">
                 <img src="/images/lap2-asus-vio.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">Laptop2</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -174,7 +177,7 @@
               <a href="#">
                 <img src="/images/webcam1.png" alt="">
                 <div class="product-content">
-                    <h4 class="pro-title">Headphone1</h4>
+                    <h4 class="pro-title">webcam</h4>
                     <p class="pro-short-desc">Lorem ipsum dolor sit amet consectetur adipisicing eli ipsum dolor sit amet</p>
                     <span class="price">£29.99</span>
                     <div class="pro-footer">
@@ -203,15 +206,25 @@
                     <a href="#"><li>Shop</li></a>
                 </ul>   
             </div>
-            <div class="foot-menu">
+            <div class="foot-social">
                 <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>About us</li></a>
-                    <a href="#"><li>Contact us</li></a>
-                    <a href="#"><li>Shop</li></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f" style="color: #fff;"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
                 </ul>   
             </div>
-
+            <div class="foot-address">
+                <p>
+                    7 build - Some Road - M14 5WW - Manchester
+                </p>
+                <p>
+                    Tel : +44 711 111 111
+                </p>
+            </div>
+        </div>
+        <div class="copy-right">
+            <p>Copyright © 1995-2023 eBay Inc. All Rights Reserved</p>
         </div>
     </footer>
     
