--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
             <div class="foot-social">
                 <ul>
-                    <a href="#"><i class="fa-brands fa-facebook-f" style="color: #fff;"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-telegram"></i></a>
                     <a href="#"><i class="fa-solid fa-envelope"></i></a>
