--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             </div>
         </nav>
     </header>
+    <div class="top-img">
+        <img src="/images/top-img.png" alt="">
+    </div>
     <section>
         <div class="products-wraper">
 
