Add filters button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,33 @@
             </div>
         </nav>
     </header>
+
     <div class="top-img">
         <img src="/images/top-img.png" alt="">
     </div>
+
     <section>
+        <div class="filter-pro">
+            <form action="">
+
+                <label for="products">Sort by</label>
+                <select id="products" name="product">
+                  <option value="Select">Select</option>
+                  <option value="Low price">Low price</option>
+                  <option value="Hight price">Hight price</option>
+                  <option value="Rate">Rate</option>
+                </select>
+
+                <label for="filter">Filter by</label>
+                <select id="filter" name="filter">
+                  <option value="Select">Select</option>
+                  <option value="Headphone">Headphone</option>
+                  <option value="Laptop">Laptop</option>
+                  <option value="Keyboard">Keyboard</option>
+                </select>
+
+            </form> 
+        </div>
         <div class="products-wraper">
 
             <div class="card">
