--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" />
     <link rel="stylesheet" href="main.css">
-    <title>My page</title>
+    <title>Shop</title>
 </head>
 <body>
     <header>
@@ -60,7 +60,7 @@
         <div class="products-wraper">
 
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/head1.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Headphone1</h4>
@@ -80,7 +80,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/head2.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Headphone2</h4>
@@ -100,7 +100,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/head3.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Headphone3</h4>
@@ -120,7 +120,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/key1.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Keyboard1</h4>
@@ -140,7 +140,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/key2.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Keyboard2</h4>
@@ -160,7 +160,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/lap1-asus-vio.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Laptop1</h4>
@@ -180,7 +180,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/lap2-asus-vio.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">Laptop2</h4>
@@ -200,7 +200,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="#">
+              <a href="/single.html">
                 <img src="/images/webcam1.png" alt="">
                 <div class="product-content">
                     <h4 class="pro-title">webcam</h4>
