--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="#"><li>Shop</li></a>
+                    <a href="/journal.html"><li>Journal</li></a>
                 </ul>
                 <span class="material-symbols-outlined">shopping_basket</span>
             </div>
@@ -229,7 +229,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="#"><li>Shop</li></a>
+                    <a href="/journal.html"><li>Journal</li></a>
                 </ul>   
             </div>
             <div class="foot-social">
