Improve journal page

--- a/journal.html
+++ b/journal.html
@@ -32,10 +32,36 @@
     </header>
 
     <article>
-        <div class="improvement">improvement</div>
-        <div class="solutions">Solutions</div>
-        <div class="errors">Errors</div>
-        <div class="project">project</div>
+        <h1>Week 2</h1>
+        <div class="main-content">
+            <div class="improvement">
+                <span class="material-symbols-outlined">construction</span>
+                <h2>Improvement</h2>
+                <p>
+                    In second week I improved at HTML, CSS, and I did some js tasks on codewars site.Also I learnd about how to create CV.
+                    I was happy because of learning new things.
+                </p>
+            </div>
+            <div class="solutions">
+                <span class="material-symbols-outlined"> door_sliding</span>
+                <h2>Solutions</h2>
+                <p>I found a lot of solutions while I practice js on codewars site.
+                    Also I researched solutions on internet and saw others solutions.
+                </p>
+            </div>
+            <div class="errors">
+                <span class="material-symbols-outlined">running_with_errors</span>
+                <h2>Errors</h2>
+                <p>Sometimes I had no solution for solving js tasks, I found that I should review  js array methods to solve js task by best practice code.</p>
+            </div>
+            <div class="project">
+                <span class="material-symbols-outlined">tactic</span>
+                <h2>Project</h2>
+                <p>
+                    In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive.For visiting this project please click on "shop" in navbar menu    
+                </p>
+            </div>
+        </div>
     </article>
 
 
