--- a/single.html
+++ b/single.html
@@ -67,7 +67,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="#"><li>Shop</li></a>
+                    <a href="/index.html"><li>Shop</li></a>
                 </ul>   
             </div>
             <div class="foot-social">
