--- a/journal.html
+++ b/journal.html
@@ -32,7 +32,7 @@
     </header>
 
     <article>
-        <h1>Week 2</h1>
+        <h1>Journal Week 2</h1>
         <div class="main-content">
             <div class="improvement">
                 <span class="material-symbols-outlined">construction</span>
@@ -45,7 +45,8 @@
             <div class="solutions">
                 <span class="material-symbols-outlined"> door_sliding</span>
                 <h2>Solutions</h2>
-                <p>I found a lot of solutions while I practice js on codewars site.
+                <p>
+                    I found a lot of solutions while I practice js on codewars site.
                     Also I researched solutions on internet and saw others solutions.
                 </p>
             </div>
@@ -58,9 +59,14 @@
                 <span class="material-symbols-outlined">tactic</span>
                 <h2>Project</h2>
                 <p>
-                    In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive.For visiting this project please click on "shop" in navbar menu    
+                    In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive.
+                    <br><b>For visiting this project please click on "shop" in navbar menu</b>    
                 </p>
             </div>
+        </div>
+        <div class="ProjectScreen">
+            <h2>Sample project</h2>
+            <img src="/images/shopScreen.png" alt="">
         </div>
     </article>
 
