--- a/journal.html
+++ b/journal.html
@@ -26,7 +26,8 @@
                     <a href="#"><li>Contact us</li></a>
                     <a href="/index.html"><li>Shop</li></a>
                 </ul>
-                <span class="material-symbols-outlined">shopping_basket</span>
+                <span class="material-symbols-outlined basket">shopping_basket</span>
+                <span class="material-symbols-outlined hamber">menu</span>
             </div>
         </nav>
     </header>
