--- a/journal.html
+++ b/journal.html
@@ -26,14 +26,13 @@
                     <a href="#"><li>Contact us</li></a>
                     <a href="/index.html"><li>Shop</li></a>
                 </ul>
-                <span class="material-symbols-outlined basket">shopping_basket</span>
                 <span class="material-symbols-outlined hamber">menu</span>
             </div>
         </nav>
     </header>
 
     <article>
-        <h1>Journal Week 2</h1>
+        <h1>Journal Week 1 & 2</h1>
         <div class="main-content">
             <div class="improvement">
                 <span class="material-symbols-outlined">construction</span>
@@ -61,13 +60,13 @@
                 <h2>Project</h2>
                 <p>
                     In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive.
-                    <br><b>For visiting this project please click on "shop" in navbar menu</b>    
+                    <br><b>For visiting this project please click on "shop" in navbar menu or click on below picture</b>    
                 </p>
             </div>
         </div>
         <div class="ProjectScreen">
             <h2>Sample project</h2>
-            <img src="/images/shopScreen.png" alt="">
+            <a href="./index.html"><img src="/images/shopScreen.png" alt=""></a>
         </div>
     </article>
 
@@ -100,7 +99,7 @@
             </div>
         </div>
         <div class="copy-right">
-            <p>Copyright © 1995-2023 eBay Inc. All Rights Reserved</p>
+            <p>Copyright © 1995-2023. All Rights Reserved</p>
         </div>
     </footer>
     
