--- a/single.html
+++ b/single.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="copy-right">
-            <p>Copyright © 1995-2023 eBay Inc. All Rights Reserved</p>
+            <p>Copyright © 1995-2023. All Rights Reserved</p>
         </div>
     </footer>
     
