Change icon color

--- a/journal.html
+++ b/journal.html
@@ -32,6 +32,7 @@
     </header>
 
     <article>
+        <div class="shape"></div>
         <h1>Journal Week 1 & 2</h1>
         <div class="main-content">
             <div class="improvement">
