Add introduction section

--- a/journal.html
+++ b/journal.html
@@ -32,35 +32,40 @@
     </header>
 
     <article>
-        <div class="shape"></div>
+        <div class="introduction">
+            <img src="./images/moeinPic.jpg" alt="">
+            <div class="intro-me">
+                <h2>Moein Zidehsaraei</h2>
+                <p>Wellcome to my journal.I am full stack developer student at Groth company.I will write my experienceWelcome to my journal.I am full stack developer student at Growth company.I will write my experience lessons and my projects in this page.Thank you for visiting my journal. I hope you find it insightful and enjoyable.</p>
+            </div>
+        </div>
         <h1>Journal Week 1 & 2</h1>
         <div class="main-content">
             <div class="improvement">
                 <span class="material-symbols-outlined">construction</span>
                 <h2>Improvement</h2>
                 <p>
-                    In second week I improved at HTML, CSS, and I did some js tasks on codewars site.Also I learnd about how to create CV.
-                    I was happy because of learning new things.
+                    I improved at HTML, CSS, js and, SQL.I learned git.  my resarch skills have increased. did js tasks on codewars site.Also I learnd about how to create CV. I was happy because of learning new things.
                 </p>
             </div>
             <div class="solutions">
-                <span class="material-symbols-outlined"> door_sliding</span>
+                <span class="material-symbols-outlined">door_sliding</span>
                 <h2>Solutions</h2>
                 <p>
-                    I found a lot of solutions while I practice js on codewars site.
-                    Also I researched solutions on internet and saw others solutions.
+                    I found a lot of solutions while I practiced js on codewars site. Also I used my research skills.
+                    Before coding I tried to imagine my solution by algorithmic and logical thinking.
                 </p>
             </div>
             <div class="errors">
                 <span class="material-symbols-outlined">running_with_errors</span>
                 <h2>Errors</h2>
-                <p>Sometimes I had no solution for solving js tasks, I found that I should review  js array methods to solve js task by best practice code.</p>
+                <p>Sometimes I had no good solution for solving js tasks, I found that I should review js array methods to solve js tasks by best practice code.Also research skills helped me.</p>
             </div>
             <div class="project">
                 <span class="material-symbols-outlined">tactic</span>
                 <h2>Project</h2>
                 <p>
-                    In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive.
+                    In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
                     <br><b>For visiting this project please click on "shop" in navbar menu or click on below picture</b>    
                 </p>
             </div>
