Improve some styles

--- a/journal.html
+++ b/journal.html
@@ -24,7 +24,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="/index.html"><li>Shop</li></a>
+                    <a href="/index.html"><li>Projects</li></a>
                 </ul>
                 <span class="material-symbols-outlined hamber">menu</span>
             </div>
@@ -66,7 +66,7 @@
                 <h2>Project</h2>
                 <p>
                     In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
-                    <br><b>For visiting this project please click on "shop" in navbar menu or click on below picture</b>    
+                    <br><b>For visiting this project please click on "Projects" in navbar menu or click on below picture</b>    
                 </p>
             </div>
         </div>
@@ -84,7 +84,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="/index.html"><li>Shop</li></a>
+                    <a href="/index.html"><li>Projects</li></a>
                 </ul>   
             </div>
             <div class="foot-social">
