Sort menu for small screen size

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
             <a href="#">Login / Register</a>
         </div>
         <nav>
-            <div class="menu">
+            <div class="menu" id="top-menu">
+                <input type="checkbox" name="top-menu" id="hamber-menu">
+                <label for="hamber-menu"><span class="material-symbols-outlined hamber">menu</span></label>
                 <ul>
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
                     <a href="/journal.html"><li>Journal</li></a>
                 </ul>
-                <span class="material-symbols-outlined hamber">menu</span>
+                
                 <span class="material-symbols-outlined basket">shopping_basket</span>
             </div>
         </nav>
