--- a/journal.html
+++ b/journal.html
@@ -19,14 +19,15 @@
             <a href="#">Login / Register</a>
         </div>
         <nav>
-            <div class="menu">
+            <div class="menu journal-menu" id="top-menu">
+                <input type="checkbox" name="top-menu" id="hamber-menu">
+                <label for="hamber-menu"><span class="material-symbols-outlined hamber">menu</span></label>
                 <ul>
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="/index.html"><li>Projects</li></a>
+                    <a href="./index.html"><li>Projects</li></a>
                 </ul>
-                <span class="material-symbols-outlined hamber">menu</span>
             </div>
         </nav>
     </header>
