--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="./index.html"><li>Projects</li></a>
+                    <a href="#"><li>Projects</li></a>
                 </ul>
             </div>
         </nav>
@@ -85,7 +85,7 @@
                     <a href="#"><li>Home</li></a>
                     <a href="#"><li>About us</li></a>
                     <a href="#"><li>Contact us</li></a>
-                    <a href="/index.html"><li>Projects</li></a>
+                    <a href="#"><li>Projects</li></a>
                 </ul>   
             </div>
             <div class="foot-social">
