--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
     <header>
         <div class="top-header">
             <img src="/images/logo.png" alt="">
-            <div class="search">
-                <input type="text" placeholder="Search your item">
-                <span class="material-symbols-outlined">search</span>
-            </div>
             <a href="#">Login / Register</a>
         </div>
         <nav>
@@ -24,9 +20,8 @@
                 <label for="hamber-menu"><span class="material-symbols-outlined hamber">menu</span></label>
                 <ul>
                     <a href="#"><li>Home</li></a>
-                    <a href="#"><li>About us</li></a>
-                    <a href="#"><li>Contact us</li></a>
-                    <a href="#"><li>Projects</li></a>
+                    <a href="./lessons.html"><li>Lessons</li></a>
+                    <a href="./sampleProjects.html"><li>Sample projects</li></a>
                 </ul>
             </div>
         </nav>
@@ -37,45 +32,133 @@
             <img src="./images/moeinPic.jpg" alt="">
             <div class="intro-me">
                 <h2>Moein Zidehsaraei</h2>
-                <p>Wellcome to my journal.I am full stack developer student at Groth company.I will write my experienceWelcome to my journal.I am full stack developer student at Growth company.I will write my experience lessons and my projects in this page.Thank you for visiting my journal. I hope you find it insightful and enjoyable.</p>
+                <p>Wellcome to my journal.I am full stack developer student at Growth company.I'd like to share with you my experience lessons and my projects in this page.Thank you for visiting my journal. I hope you find it insightful and enjoyable.</p>
             </div>
         </div>
-        <h1>Journal Week 1 & 2</h1>
-        <div class="main-content">
-            <div class="improvement">
-                <span class="material-symbols-outlined">construction</span>
-                <h2>Improvement</h2>
-                <p>
-                    I improved at HTML, CSS, js and, SQL.I learned git.  my resarch skills have increased. did js tasks on codewars site.Also I learnd about how to create CV. I was happy because of learning new things.
-                </p>
+        <div class="accordion-wraper">
+            <h1 class="animate-header">Weekly experience</h1>
+            <div class="accordion-sction" id="accordion">
+            <div class="accor-content">
+                <input type="radio" name="accordion" id="one">
+                <label for="one">Week 1<span class="material-symbols-outlined">event</span></label>
+                <div class="accor-text">
+                    <div class="main-content">
+                        <div class="improvement">
+                            <span class="material-symbols-outlined">construction</span>
+                            <h2>Improvement</h2>
+                            <p>
+                                At the first week  our teachers introduced tools that we will use them as a web develpoer.Like as vscode and its terminal and some site for practice coding like as codewars. After that they explained about high and low level programming languages and node.js
+                                Also they started to teach javascript and "console.log()" was first thing we learned.
+                            </p>
+                            <p class="more-info"><b>For more information about details of our lessons in this week please click on link below</b></p>
+                            <a href="./lessons.html">Details informations</a>
+                        </div>
+                        <div class="solutions">
+                            <span class="material-symbols-outlined">door_sliding</span>
+                            <h2>Solutions</h2>
+                            <p>
+                                I found a lot of solutions while I practiced js on codewars site. Also I used my research skills.
+                                Before coding I tried to imagine my solution by algorithmic and logical thinking.
+                            </p>
+                        </div>
+                        <div class="errors">
+                            <span class="material-symbols-outlined">running_with_errors</span>
+                            <h2>Errors</h2>
+                            <p>Sometimes I had no good solution for solving js tasks, I found that I should review js array methods to solve js tasks by best practice code.Also research skills helped me.</p>
+                        </div>
+                        <div class="project">
+                            <span class="material-symbols-outlined">tactic</span>
+                            <h2>Project</h2>
+                            <p>
+                                In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
+                                <br><b>For visiting pictures of project please click on link blow</b>    
+                            </p>
+                            <a href="./sampleProjects.html">Pictures of completed project</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="solutions">
-                <span class="material-symbols-outlined">door_sliding</span>
-                <h2>Solutions</h2>
-                <p>
-                    I found a lot of solutions while I practiced js on codewars site. Also I used my research skills.
-                    Before coding I tried to imagine my solution by algorithmic and logical thinking.
-                </p>
+            <div class="accor-content">
+                <input type="radio" name="accordion" id="two">
+                <label for="two">Week 2<span class="material-symbols-outlined">event</span></label>
+                <div class="accor-text">
+                    <div class="main-content">
+                        <div class="improvement">
+                            <span class="material-symbols-outlined">construction</span>
+                            <h2>Improvement</h2>
+                            <p>
+                                I improved at HTML, CSS, js and, SQL.I learned git.  my resarch skills have increased. did js tasks on codewars site.Also I learnd about how to create CV. I was happy because of learning new things.
+                            </p>
+                            <p class="more-info"><b>For more information about my experience please click on link below</b></p>
+                            <a href="./lessons.html">Details informations</a>
+                        </div>
+                        <div class="solutions">
+                            <span class="material-symbols-outlined">door_sliding</span>
+                            <h2>Solutions</h2>
+                            <p>
+                                I found a lot of solutions while I practiced js on codewars site. Also I used my research skills.
+                                Before coding I tried to imagine my solution by algorithmic and logical thinking.
+                            </p>
+                        </div>
+                        <div class="errors">
+                            <span class="material-symbols-outlined">running_with_errors</span>
+                            <h2>Errors</h2>
+                            <p>Sometimes I had no good solution for solving js tasks, I found that I should review js array methods to solve js tasks by best practice code.Also research skills helped me.</p>
+                        </div>
+                        <div class="project">
+                            <span class="material-symbols-outlined">tactic</span>
+                            <h2>Project</h2>
+                            <p>
+                                In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
+                                <br><b>For visiting this project please click on "Projects" in navbar menu or click on below picture</b>    
+                            </p>
+                            <a href="./sampleProjects.html">Pictures of completed project</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="errors">
-                <span class="material-symbols-outlined">running_with_errors</span>
-                <h2>Errors</h2>
-                <p>Sometimes I had no good solution for solving js tasks, I found that I should review js array methods to solve js tasks by best practice code.Also research skills helped me.</p>
+            <div class="accor-content">
+                <input type="radio" name="accordion" id="three">
+                <label for="three">Week 3<span class="material-symbols-outlined">event</span></label>
+                <div class="accor-text">
+                    <div class="main-content">
+                        <div class="improvement">
+                            <div style="width: 100%;">content will be posted soon</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="project">
-                <span class="material-symbols-outlined">tactic</span>
-                <h2>Project</h2>
-                <p>
-                    In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
-                    <br><b>For visiting this project please click on "Projects" in navbar menu or click on below picture</b>    
-                </p>
+            <div class="accor-content">
+                <input type="radio" name="accordion" id="four">
+                <label for="four">Week 4<span class="material-symbols-outlined">event</span></label>
+                <div class="accor-text">
+                    <div class="main-content">
+                        <div class="improvement">
+                            <div style="width: 100%;">content will be posted soon</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accor-content">
+                <input type="radio" name="accordion" id="five">
+                <label for="five">Week 5<span class="material-symbols-outlined">event</span></label>
+                <div class="accor-text">
+                    <div class="main-content">
+                        <div class="improvement">
+                            <div style="width: 100%;">content will be posted soon</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
-        <div class="ProjectScreen">
+
+        <!-- <div class="ProjectScreen">
             <h2>Sample project</h2>
             <a href="./index.html"><img src="/images/shopScreen.png" alt=""></a>
-        </div>
+        </div> -->
     </article>
+
 
 
     <footer>
@@ -83,9 +166,8 @@
             <div class="foot-menu">
                 <ul>
                     <a href="#"><li>Home</li></a>
-                    <a href="#"><li>About us</li></a>
-                    <a href="#"><li>Contact us</li></a>
-                    <a href="#"><li>Projects</li></a>
+                    <a href="./lessons.html"><li>Lessons</li></a>
+                    <a href="./sampleProjects.html"><li>Sample projects</li></a>
                 </ul>   
             </div>
             <div class="foot-social">
