Add week1 content & responsive lessons page

--- a/lessons.html
+++ b/lessons.html
@@ -29,15 +29,110 @@
 
     <section>
         <div class="lessons-wraper">
-            <div style="background-color: #b2b2b2">
-                <div class="lesson">
-                    <h3>Variables</h3>
-                    <p>a</p>
+            <div class="lesson">
+                <h2>Week 1</h2>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Data type</h3>
+                        <p>There are several data type in programming languages</p>
+                    </div>
+                    <div class="content-sample">
+                        <ul>
+                            <li>String: for representing text</li>
+                            <li>Numbers: for representing numbers</li>
+                            <li>Boolean: for true and false</li>
+                            <li>Null: for nothing</li>
+                            <li>Undefined: for when data type isn't determaind</li>
+                            <li>Symbol</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Variables</h3>
+                        <p>Variables be defined by keywords "const", "let", "var" to store a value or values</p>
+                    </div>
+                    <div class="content-sample">
+                        <ul>
+                            <li>const name = "Moein"</li>
+                            <li>let sum = a + b</li>
+                            <li>var x = 3</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Arithmetic Operators</h3>
+                        <p></p>
+                    </div>
+                    <div class="content-sample">
+                        <ul>
+                            <li>+</li>
+                            <li>-</li>
+                            <li>*</li>
+                            <li>**</li>
+                            <li>/</li>
+                            <li>%</li>
+                            <li>++</li>
+                            <li>--</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Assignment Operator</h3>
+                        <p></p>
+                    </div>
+                    <div class="content-sample">
+                        <ul>
+                            <li>=</li>
+                            <li>*=</li>
+                            <li>+=</li>
+                            <li>-=</li>
+                            <li>/=</li>
+                            <li>++</li>
+                            <li>--</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>if</h3>
+                        <p>Use the keyword ‘if’ to start a conditional statement</p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/if-sample.png" alt="">
+                        <img src="./images/lessonsImg/if-else-sample.png" alt="">
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Array</h3>
+                        <p>More stuff to do with more data.In the real world an array is like a list (shopping list)</p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/if-sample.png" alt="">
+                        <img src="./images/lessonsImg/array-sample.png" alt="">
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content-header">
+                        <h3>For and While Loops</h3>
+                        <p>"for" loop, it will iterate though the array and console log each item
+                            *i stands for index, which is widely used in loops. However, it could be anything you like.
+                            A "while" loop will continue to run while a condition is true
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/for-loop.png" alt="">
+                        <img src="./images/lessonsImg/while-loop.png" alt="">
+                    </div>
                 </div>
             </div>
-            <div style="background-color: #d12929;">
-                <div class="lesson">
-                    dfgsdf
+            <div class="lesson" style="background-color: red;">
+                <div class="content">
+                    <h3>Variables</h3>
+                    <p>a</p>
                 </div>
             </div>
         </div>
@@ -47,7 +142,7 @@
         <div class="footer-wraper">
             <div class="foot-menu">
                 <ul>
-                    <a href="#"><li>Home</li></a>
+                    <a href="./index.html"><li>Home</li></a>
                     <a href="./lessons.html"><li>Lessons</li></a>
                     <a href="./sampleProjects.html"><li>Sample projects</li></a>
                 </ul>   
