Add second week content

--- a/lessons.html
+++ b/lessons.html
@@ -129,11 +129,101 @@
                     </div>
                 </div>
             </div>
-            <div class="lesson" style="background-color: red;">
+            <div class="lesson">
+                <h2>Week 2</h2>
                 <div class="content">
-                    <h3>Variables</h3>
-                    <p>a</p>
-                </div>
+                    <div class="content-header">
+                        <h3>Js objects</h3>
+                        <p>objects are containers that can store data and functions. We use Key-Value pairs to store the data</p>
+                    </div>
+                    <div class="content-sample">
+                        const members = {
+                            name: "Moein",
+                            lastName: "Zidehsaraei",
+                            age: 45
+                        } 
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>HTML</h3>
+                        <p>
+                            is used for coding the content of webpages. It  has been around since the early 90’s.
+                            HTML is constructed using ELEMENTS
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/HTML-tag.png" alt="">
+                        <img src="./images/lessonsImg/sample-tag.png" alt="">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>CSS</h3>
+                        <p>
+                           CSS ic Cascading Style Sheets
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/css-syntax.png" alt="">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Box Model</h3>
+                        <p>
+                           CSS ic Cascading Style Sheets.
+                           Content
+                           The content of the box, where text and images appear.
+                           Padding
+                           Clears an area around the content. The Padding is transparent
+                           Border
+                           A border that goes around the padding and content.
+                           Margin
+                           Clears and area outside the border. The Margin is transparent.
+
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/boxModel.png" alt="">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Media query</h3>
+                        <p>
+                            Media queries allow us to change styles depending on  particular parameters like screen width or device type.
+                            <b>Here there are media query codes.Please resize this page to see changed styles</b> 
+                        </p>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/mediaSample.png" alt="" style="height: 300px;">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Flexbox</h3>
+                        <p>
+                            Flexbox, or the Flexible Box Layout, is a layout model in CSS that allows you to design complex layouts with a more efficient and predictable way to distribute space and align content in a container, even when the size of your items is unknown or dynamic. It is particularly useful for creating responsive and complex layouts without relying heavily on floats or positioning.                        </p>
+                            <b>There are two flexbox codes belong to this page and home page</b>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/flexBox.png" alt="" style="height: 300px;">
+                        <img src="./images/lessonsImg/flexbox2.png" alt="" style="height: 300px;">
+                    </div>
+                </div>                
+                <div class="content">
+                    <div class="content-header">
+                        <h3>Animation</h3>
+                        <p>
+                            CSS allows animation of HTML elements without using JavaScript or Flash!
+                            <b>Here, There are an animation code and its output</b>
+                    </div>
+                    <div class="content-sample">
+                        <img src="./images/lessonsImg/animation.png" alt="" style="height: 300px;">
+                        <div id="sampleAnimation" style="width: 200px;height: 200px;border-radius: 50%;background-color: yellowgreen;"></div>
+                    </div>
+                </div>                
             </div>
         </div>
     </section>
