Add content to thirth page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <span class="material-symbols-outlined">tactic</span>
                             <h2>Project</h2>
                             <p>
-                                In second week I designed a shop project include main shop products page and single product page.In this project I used flexbox and css grid for responsive. Also I desided to improve it on serverside during this course.
+                                At the first week we did a lot of tasks and chalanges 
                                 <br><b>For visiting pictures of project please click on link blow</b>    
                             </p>
                             <a href="./sampleProjects.html">Pictures of completed project</a>
@@ -87,7 +87,7 @@
                             <span class="material-symbols-outlined">construction</span>
                             <h2>Improvement</h2>
                             <p>
-                                I improved at HTML, CSS, js and, SQL.I learned git.  my resarch skills have increased. did js tasks on codewars site.Also I learnd about how to create CV. I was happy because of learning new things.
+                                In this week I improved at HTML, CSS, js also I learned SQL language.I started to design and coding an E-commerce page. I was vwry happy because I got a lot of experience at HTML & CSS.My resarch skills have increased as well.I learned how to use w3schools and MDN site when I want to need some helps.Also I learnd about how to create CV.It was a fantastic week.
                             </p>
                             <p class="more-info"><b>For more information about my experience please click on link below</b></p>
                             <a href="./lessons.html">Details informations</a>
@@ -96,14 +96,14 @@
                             <span class="material-symbols-outlined">door_sliding</span>
                             <h2>Solutions</h2>
                             <p>
-                                I found a lot of solutions while I practiced js on codewars site. Also I used my research skills.
-                                Before coding I tried to imagine my solution by algorithmic and logical thinking.
+                                I practiced some js tasks on codewars site.
+                                I got beter experience while I was working on SQL Fiddle site.Our teacher take us to create database and insert data, delete data into database.
                             </p>
                         </div>
                         <div class="errors">
                             <span class="material-symbols-outlined">running_with_errors</span>
                             <h2>Errors</h2>
-                            <p>Sometimes I had no good solution for solving js tasks, I found that I should review js array methods to solve js tasks by best practice code.Also research skills helped me.</p>
+                            <p>In learning processI always research and review my lessens when I have a problem. Also I think seeing aother's code and analysis them and comparing with my code is very useful</p>
                         </div>
                         <div class="project">
                             <span class="material-symbols-outlined">tactic</span>
@@ -152,11 +152,6 @@
             </div>
             </div>
         </div>
-
-        <!-- <div class="ProjectScreen">
-            <h2>Sample project</h2>
-            <a href="./index.html"><img src="/images/shopScreen.png" alt=""></a>
-        </div> -->
     </article>
 
 
